FixBug and Create ListAdapter with Header