@@ -6,7 +6,11 @@ public class StringToFloat implements ConversionType<Float, String> {
 
 	@Override
 	public Float conversion(final String object) {
-		return new Float(object);
+		Float float1 = null;
+		if (object != null && !object.isEmpty()) {
+			float1 = Float.valueOf(object);
+		}
+		return float1;
 	}
 
 }
